<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
             android:id="@+id/fl_root"
             android:layout_width="match_parent"
             android:layout_height="match_parent">

    <include layout="@layout/toolbar"/>

    <android.support.v7.widget.RecyclerView
        android:id="@+id/recycler"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginBottom="@dimen/db_48"
        android:layout_marginTop="?attr/actionBarSize">


    </android.support.v7.widget.RecyclerView>


    <ImageView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="bottom"
        android:layout_marginBottom="@dimen/bottombar_height"
        android:background="@drawable/actionbar_shadow_up"/>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="@dimen/bottombar_height"
        android:layout_gravity="bottom"
        android:orientation="horizontal">

        <LinearLayout
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="2.5">

            <CheckBox
                android:id="@+id/cb_all"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_vertical"
                android:layout_marginLeft="8dp"
                android:paddingLeft="@dimen/db_8"
                android:text="@string/all_selection"
                android:textColor="@color/check_text"
                android:textSize="14sp"/>

            <TextView
                android:layout_marginLeft="8dp"
                android:id="@+id/tv_price"
                android:layout_width="0dp"
                android:layout_weight="1"
                android:gravity="right"
                android:layout_height="wrap_content"
                android:layout_gravity="right|center_vertical"
                android:layout_marginRight="8dp"
                android:text="@string/amount"
                android:textColor="@color/amount_text"
                android:textSize="14sp"/>

        </LinearLayout>

        <TextView
            android:id="@+id/tv_settlement"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:background="#ff5500"
            android:gravity="center"
            android:text="@string/settlement"
            android:textColor="@color/white"
            android:textSize="16sp">

        </TextView>

    </LinearLayout>

</FrameLayout>